// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Notifications Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iqcFkW sc-hHLeRK dzJWYl"
    >
      <div
        class="react-notification-root sc-gJwTLC dDXhxq"
      >
        <div
          class="notification-container-top-left"
        />
        <div
          class="notification-container-top-right"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
              >
                
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
                >
                  
                  <span
                    class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                  >
                    This is a notification
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
              >
                
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
                >
                  
                  <span
                    class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                  >
                    <div
                      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux"
                    >
                      <div
                        class="sc-ivTmOn dNJphr sc-cxabCf NTMnw"
                      >
                        Some text for the user to read
                      </div>
                      <button
                        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv"
                        type="button"
                      >
                        This is a button
                      </button>
                    </div>
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="notification-container-bottom-left"
        />
        <div
          class="notification-container-bottom-right"
        />
        <div
          class="notification-container-top-center"
        />
        <div
          class="notification-container-center"
        >
          <div
            class="center-inner"
          />
        </div>
        <div
          class="notification-container-bottom-center"
        />
      </div>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        Add text notification
      </button>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        Add button notification
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Notifications Positioning 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="react-notification-root sc-gJwTLC dDXhxq"
    >
      <div
        class="notification-container-top-left"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                >
                  top-left
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-top-right"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                >
                  top-right
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-left"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                >
                  bottom-left
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-right"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                >
                  bottom-right
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-top-center"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                >
                  top-center
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-center"
      >
        <div
          class="center-inner"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 10ms height;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
              >
                
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
                >
                  
                  <span
                    class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                  >
                    center
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-center"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-ivTmOn dNJphr sc-llJcti iKEiEp"
                >
                  bottom-center
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds hnToDo sc-hHLeRK fDtTuc"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY"
      >
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          top-left
        </button>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          top-center
        </button>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          top-right
        </button>
      </div>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        center
      </button>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY"
      >
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          bottom-left
        </button>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          bottom-center
        </button>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          bottom-right
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Notifications Types 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iqcFkW sc-hHLeRK dzJWYl"
    >
      <div
        class="react-notification-root sc-gJwTLC dDXhxq"
      >
        <div
          class="notification-container-top-left"
        />
        <div
          class="notification-container-top-right"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds dnRYSM sc-hHLeRK sc-dmRaPn iKIurY FGhRa sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
              >
                <div
                  class="sc-ivTmOn dNJphr sc-cxabCf eemXLs"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-lightbulb "
                    data-icon="lightbulb"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M272 384c9.6-31.9 29.5-59.1 49.2-86.2l0 0c5.2-7.1 10.4-14.2 15.4-21.4c19.8-28.5 31.4-63 31.4-100.3C368 78.8 289.2 0 192 0S16 78.8 16 176c0 37.3 11.6 71.9 31.4 100.3c5 7.2 10.2 14.3 15.4 21.4l0 0c19.8 27.1 39.7 54.4 49.2 86.2H272zM192 512c44.2 0 80-35.8 80-80V416H112v16c0 44.2 35.8 80 80 80zM112 176c0 8.8-7.2 16-16 16s-16-7.2-16-16c0-61.9 50.1-112 112-112c8.8 0 16 7.2 16 16s-7.2 16-16 16c-44.2 0-80 35.8-80 80z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds tsoYt"
                >
                  <span
                    class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
                  >
                    Note!
                  </span>
                  <span
                    class="sc-ivTmOn dNJphr sc-llJcti lccPfE"
                  >
                    info
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR ftKnur sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds gdzJDO sc-hHLeRK sc-dmRaPn iKIurY kIPQvp sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
              >
                <div
                  class="sc-ivTmOn dNJphr sc-cxabCf bLiaOm"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-triangle-exclamation "
                    data-icon="triangle-exclamation"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224c0-17.7-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32s32-14.3 32-32z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds gurykB"
                >
                  <span
                    class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
                  >
                    Warning!
                  </span>
                  <span
                    class="sc-ivTmOn dNJphr sc-llJcti hkztAs"
                  >
                    warning
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR jKabsr sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds gwVQPy sc-hHLeRK sc-dmRaPn iKIurY blUbwm sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
              >
                <div
                  class="sc-ivTmOn dNJphr sc-cxabCf CTiCS"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check "
                    data-icon="circle-check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds jAkInX"
                >
                  <span
                    class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
                  >
                    Success!
                  </span>
                  <span
                    class="sc-ivTmOn dNJphr sc-llJcti ggoDmC"
                  >
                    success
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR cbTNTl sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds gDBmYX sc-hHLeRK sc-dmRaPn iKIurY jrmdGN sc-gicCDI cmHWGP sc-dkSuNL jdjagY"
              >
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds iAZiqN"
                >
                  <span
                    class="sc-ivTmOn fSbxau sc-llJcti egDqiq"
                  >
                    <span
                      class="sc-ivTmOn dNJphr sc-llJcti fiaTLE"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-ban "
                        data-icon="ban"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M367.2 412.5L99.5 144.8C77.1 176.1 64 214.5 64 256c0 106 86 192 192 192c41.5 0 79.9-13.1 111.2-35.5zm45.3-45.3C434.9 335.9 448 297.5 448 256c0-106-86-192-192-192c-41.5 0-79.9 13.1-111.2 35.5L412.5 367.2zM512 256c0 141.4-114.6 256-256 256S0 397.4 0 256S114.6 0 256 0S512 114.6 512 256z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
                    >
                      Error!
                    </span>
                  </span>
                  <span
                    class="sc-ivTmOn dNJphr sc-llJcti faUpXQ"
                  >
                    danger
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR hllURX sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="notification-container-bottom-left"
        />
        <div
          class="notification-container-bottom-right"
        />
        <div
          class="notification-container-top-center"
        />
        <div
          class="notification-container-center"
        >
          <div
            class="center-inner"
          />
        </div>
        <div
          class="notification-container-bottom-center"
        />
      </div>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        danger
      </button>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        success
      </button>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        warning
      </button>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        info
      </button>
    </div>
  </div>
</div>
`;
